# plume

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prebuilt  LICENSE  README.md  SECURITY.md  config.local.toml  config.toml  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
bench/: Cargo.toml  bench_ann.rs  bench_latency.rs  bench_recall.rs
crates/plume-api/: Cargo.toml
crates/plume-api/src/: auto_index.rs  jobs.rs  main.rs  routes.rs  serve.rs  state.rs
crates/plume-api/src/cli/: clear.rs  client.rs  completions.rs  grep.rs  index.rs  ingest.rs  mod.rs  model.rs  ns.rs  progress.rs  push.rs  search.rs  source.rs  status.rs
crates/plume-cache/: Cargo.toml
crates/plume-cache/src/: generation.rs  lib.rs
crates/plume-core/: Cargo.toml
crates/plume-core/src/: config.rs  error.rs  types.rs
crates/plume-encoder/: Cargo.toml
crates/plume-encoder/src/: lib.rs  onnx.rs  pool.rs
crates/plume-index/: Cargo.toml
crates/plume-index/src/: lib.rs  schema.rs  table.rs
crates/plume-search/: Cargo.toml
crates/plume-search/src/: fusion.rs  lib.rs  maxsim.rs
scripts/: download-model.sh  download-scifact.sh
