[package]
name = "plume-api"
version.workspace = true
edition.workspace = true

[features]
default = []
# Propagate cloud backend support to the API binary only when explicitly requested.
storage-aws = ["plume-index/storage-aws"]
storage-gcs = ["plume-index/storage-gcs"]

[[bin]]
name = "plume"
path = "src/main.rs"

[dependencies]
plume-core = { workspace = true }
plume-encoder = { workspace = true }
plume-index = { workspace = true }
plume-cache = { workspace = true }
plume-search = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
