[package]
name = "plume-api"
version.workspace = true
edition.workspace = true

[features]
default = []
# Propagate cloud backend support to the API binary only when explicitly requested.
# `storage-aws` / `storage-gcs` flip on both the LanceDB object-store backend
# *and* the matching `object_store` provider in the CLI, so `plume ingest` and
# `plume grep` can read directly from s3:// / gs:// URLs.
storage-aws = ["plume-index/storage-aws", "object_store/aws"]
storage-gcs = ["plume-index/storage-gcs", "object_store/gcp"]

[[bin]]
name = "plume"
path = "src/main.rs"

[dependencies]
plume-core = { workspace = true }
plume-encoder = { workspace = true }
plume-index = { workspace = true }
plume-cache = { workspace = true }
plume-search = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
url = "2"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
