[package]
name = "plume-api"
version.workspace = true
edition.workspace = true

[features]
# Defaults ship cloud backends but leave ONNX opt-in: pyke's prebuilt ORT
# doesn't cover every host (notably x86_64 macOS), so a default
# `cargo build` must stay portable. End users who want a zero-flag
# install should grab a prebuilt binary (see README), which is built per
# target with the matching ONNX feature already on.
default = ["storage-aws", "storage-gcs"]
# Propagate cloud backend support to the API binary. `storage-aws` /
# `storage-gcs` flip on both the LanceDB object-store backend *and* the
# matching `object_store` provider in the CLI so `plume ingest`, `plume grep`,
# and `plume push` can read/write s3:// / gs:// URLs directly.
storage-aws = ["plume-index/storage-aws", "object_store/aws"]
storage-gcs = ["plume-index/storage-gcs", "object_store/gcp"]
# Forward the encoder's real-ONNX path so the binary picks up a configured
# local model rather than silently falling back to the mock encoder.
onnx = ["plume-encoder/onnx"]
# Intel-Mac / system-ORT alternative: link-free runtime dlopen of an
# already-installed libonnxruntime. Pass `--no-default-features` and then
# add this flag (usually with storage-aws and/or storage-gcs).
onnx-system-ort = ["plume-encoder/onnx-system-ort"]

[[bin]]
name = "plume"
path = "src/main.rs"

[dependencies]
plume-core = { workspace = true }
plume-encoder = { workspace = true, default-features = false }
plume-index = { workspace = true }
plume-cache = { workspace = true }
plume-search = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
reqwest = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
url = "2"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
