[package]
name = "plume-cache"
version.workspace = true
edition.workspace = true

[dependencies]
plume-core = { workspace = true }
foyer = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
