[package]
name = "plume-index"
version.workspace = true
edition.workspace = true

[dependencies]
plume-core = { workspace = true }
lancedb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
object_store = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
