[package]
name = "plume-index"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable remote object-store support only for builds that need it.
storage-aws = ["lancedb/aws"]
storage-gcs = ["lancedb/gcs"]

[dependencies]
plume-core = { workspace = true }
lancedb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
